clap_derive/tests/ui/option_required.stderr
error: required is meaningless for Option
  --> $DIR/option_required.rs:14:19
   |
14 |     #[clap(short, required = true)]
   |                   ^^^^^^^^

error[E0277]: the trait bound `Opt: std::convert::From<clap::parse::matches::arg_matches::ArgMatches>` is not satisfied
  --> $DIR/option_required.rs:11:10
   |
11 | #[derive(Clap, Debug)]
   |          ^^^^ the trait `std::convert::From<clap::parse::matches::arg_matches::ArgMatches>` is not implemented for `Opt`
